--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NetAware</title>
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+      <link rel="shortcut icon" href="/image/log.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -66,21 +67,21 @@
       </section>
     </main>
 
-    <section class="about" id="about">
-  <div class="about-container">
-    <h2>About NetAware</h2>
-    <div class="about-content">
-      <div class="about-item">
-        <h4>Mission</h4>
-        <p>
+  <section class="about" id="about">
+    <div class="about-container">
+      <h2>About NetAware</h2>
+      <div class="about-content">
+        <div class="about-item">
+          <h4>Mission</h4>
+          <p>
           To promote cyber awareness and empower users with knowledge to stay safe online.
-        </p>
-      </div>
-      <div class="about-item">
-        <h4>Vision</h4>
-        <p>
+          </p>
+        </div>
+        <div class="about-item">
+          <h4>Vision</h4>
+          <p>
           A world of responsible, informed, and cybersmart individuals.
-        </p>
+          </p>
       </div>
       <div class="about-item">
         <h4>Why NetAware Matters</h4>
@@ -115,6 +116,21 @@
 
     <footer class="site-footer">
       <div class="container">
+    <h2 class="footer-logo"><Strong>NetAware</Strong></h2>
+    
+    <div class="footer-links">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#awareness">Awareness</a>
+      <a href="#tips">Tips</a>
+      <a href="#contact">Contact</a>
+    </div>
+
+    <div class="footer-social">
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
         <p>© NetAware 2025. Designed to make you smarter online.</p>
       </div>
     </footer>
