--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NetAware</title>
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-      <link rel="shortcut icon" href="/image/log.jpg" type="image/x-icon">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="/image/log.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -31,7 +34,7 @@
           <span>Digital Citizen</span>
         </h1>
         <p>Think Smart. Stay Safe Online.</p>
-        <a class="btn btn-primary" href="#">Get Started</a>
+        <a class="btn btn-primary" href="#page">Get Started</a>
       </div>
     </section>
 
@@ -40,9 +43,9 @@
         <div class="card">
           <img src="img1.jpg" alt="" />
           <div class="card-content">
-            <h3>Protect Your data</h3>
+            <h3 id="page">Protect Your data</h3>
             <p>Card description goes here.</p>
-            <a class="btn btn-outline" href="#">Learn More</a>
+            <a class="btn btn-outline" href="page1.html">Learn More</a>
           </div>
         </div>
 
@@ -63,74 +66,76 @@
             <a class="btn btn-outline" href="#">Learn More</a>
           </div>
         </div>
-
       </section>
     </main>
 
-  <section class="about" id="about">
-    <div class="about-container">
-      <h2>About NetAware</h2>
-      <div class="about-content">
-        <div class="about-item">
-          <h4>Mission</h4>
-          <p>
-          To promote cyber awareness and empower users with knowledge to stay safe online.
-          </p>
+    <section class="about" id="about">
+      <div class="about-container">
+        <h2>About NetAware</h2>
+        <div class="about-content">
+          <div class="about-item">
+            <h4>Mission</h4>
+            <p>
+              To promote cyber awareness and empower users with knowledge to
+              stay safe online.
+            </p>
+          </div>
+          <div class="about-item">
+            <h4>Vision</h4>
+            <p>A world of responsible, informed, and cybersmart individuals.</p>
+          </div>
+          <div class="about-item">
+            <h4>Why NetAware Matters</h4>
+            <p>
+              Discuss digital threats and highlight the importance of online
+              responsibility.
+            </p>
+          </div>
         </div>
-        <div class="about-item">
-          <h4>Vision</h4>
-          <p>
-          A world of responsible, informed, and cybersmart individuals.
-          </p>
       </div>
-      <div class="about-item">
-        <h4>Why NetAware Matters</h4>
-        <p>
-          Discuss digital threats and highlight the importance of online responsibility.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
-<!-- Contact Section -->
-<section class="contact" id="contact">
-  <div class="contact-container">
-    <h2>Contact Us</h2>
-    <div class="contact-content">
-      <p>If you have questions, feedback, or collaboration ideas, feel free to reach out to us.</p>
-      <div class="contact-info">
-        <p><strong>Email:</strong> @gmail</p>
-        <p><strong>Phone:</strong> 0909aygtouh</p>
-        <p><strong>Address:</strong> Malaybalay city , Philippines</p>
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+      <div class="contact-container">
+        <h2>Contact Us</h2>
+        <div class="contact-content">
+          <p>
+            If you have questions, feedback, or collaboration ideas, feel free
+            to reach out to us.
+          </p>
+          <div class="contact-info">
+            <p><strong>Email:</strong> @gmail</p>
+            <p><strong>Phone:</strong> 0909aygtouh</p>
+            <p><strong>Address:</strong> Malaybalay city , Philippines</p>
+          </div>
+          <form class="contact-form">
+            <input type="text" placeholder="Your Name" required />
+            <input type="email" placeholder="Your Email" required />
+            <textarea placeholder="Your Message" rows="4" required></textarea>
+            <button type="submit">Send Message</button>
+          </form>
+        </div>
       </div>
-      <form class="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" rows="4" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </div>
-  </div>
-</section>
+    </section>
 
     <footer class="site-footer">
       <div class="container">
-    <h2 class="footer-logo"><Strong>NetAware</Strong></h2>
-    
-    <div class="footer-links">
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#awareness">Awareness</a>
-      <a href="#tips">Tips</a>
-      <a href="#contact">Contact</a>
-    </div>
+        <h2 class="footer-logo"><strong>NetAware</strong></h2>
 
-    <div class="footer-social">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-    </div>
+        <div class="footer-links">
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#awareness">Awareness</a>
+          <a href="#tips">Tips</a>
+          <a href="#contact">Contact</a>
+        </div>
+
+        <div class="footer-social">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
         <p>© NetAware 2025. Designed to make you smarter online.</p>
       </div>
     </footer>
