--- a/page1.html
+++ b/page1.html
@@ -31,6 +31,7 @@
         </h1>
         <p>Learn how to safeguard your personal information in the digital world.</p>
       </div>
+    </section>
     
     <footer class="site-footer">
       <div class="container">
@@ -54,3 +55,4 @@
     </footer>
   </body>
 </html>
+
